--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -18,10 +18,13 @@ body {
     }
   }
   .date {
+    font-family: verdana;
     font-size: 50px;
+    font-weight: bold;
     position: absolute;
     text-align: center;
     text-shadow: 1px 1px 1px #fff;
+    top: 20px;
     width: 100%;
   }
  
@@ -35,7 +38,8 @@ body {
   .line_chart_meta {
     bottom: 80px;
     font-family: verdana;
-    font-size: 36px;
+    font-size: 50px;
+    font-weight: bold;
     position: absolute;
     right: 20px;
     text-align: right;
